# dotstrap

./: .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml
src/: errors.rs  lib.rs  main.rs
src/application/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/infrastructure/: command.rs  mod.rs  repository.rs  secrets.rs
src/services/: brew.rs  linker.rs  mod.rs  templating.rs
tests/: test_application.rs  test_cli.rs  test_config.rs
tests/config-brew/: manifest.yaml  values.yaml
tests/config-brew/brew/: packages.yaml
tests/config-brew/templates/: wezterm.lua.hbs  zshrc.hbs
tests/empty-config/templates/: gitconfig.hbs
tests/erroneous-config/secrets/: .gitignore  secrets.yaml
tests/erroneous-config/values-invalid/: values.yaml
