[package]
name = "dotstrap"
version = "0.1.0"
edition = "2024"
description = "Template-driven dotfiles bootstrapper for macOS"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kakise/dotstrap"
homepage = "https://github.com/Kakise/dotstrap"

[[bin]]
name = "dotstrap"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
handlebars = "6.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tempfile = "3.23.0"
walkdir = "2.5.0"
home = "0.5.11"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
serial_test = "3.2.0"
